# agentic_researcher

./: .env.example  README.md  pyproject.toml  report.md  svm.md
knowledge/: citation_styles.txt
src/agentic_researcher/: crew.py  main.py
src/agentic_researcher/config/: agents.yaml  tasks.yaml
src/agentic_researcher/tools/: __init__.py  custom_tool.py  scientific_tools.py
