[project]
name = "agentic_researcher"
version = "0.1.0"
description = "Agentic_Researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
    "litellm>=1.80.7",
    "ollama>=0.6.1",
    "requests>=2.31.0",
]

[project.scripts]
agentic_researcher = "agentic_researcher.main:run"
run_crew = "agentic_researcher.main:run"
train = "agentic_researcher.main:train"
replay = "agentic_researcher.main:replay"
test = "agentic_researcher.main:test"
run_with_trigger = "agentic_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
